fix: sidebar on mobile

--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -143,7 +143,7 @@ body::before {
 }
 
 .navbar {
-  backdrop-filter: blur(20px) saturate(180%);
+  background: var(--ifm-navbar-background-color);
   border-bottom: 1px solid var(--color-border);
   padding: 0.5rem 1rem;
 }
@@ -582,5 +582,17 @@ table tr:nth-child(even) {
   
   .markdown h2 {
     font-size: 1.5rem;
+  }
+}
+
+@media (max-width: 450px) {
+  .navbar__title {
+    font-size: 0;
+  }
+
+  .navbar__title::after {
+    content: 'RNV';
+    font-size: 1.15rem;
+    font-weight: 700;
   }
 }
